# CppApps

./: .gitignore  LICENSE  README.md
BruteForce/: BruteForce.sln
BruteForce/BruteForce/: BruteForce.cpp  BruteForce.vcxproj  BruteForce.vcxproj.filters  CMakeLists.txt  pch.h
BruteForce/BruteForce/Release/BruteForce.tlog/: BruteForce.lastbuildstate  BruteForce.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
BruteForce/Release/: BruteForce.iobj  BruteForce.ipdb
ComponentePC/: CMakeLists.txt  ComponentaPC.cpp  ComponentaPC.h  Header.h  componente.txt  main.cpp
EcLiniare/: CMakeLists.txt  Ec.Liniare.cbp  Ec.Liniare.depend  Ec.Liniare.layout  main.cpp  matr.txt
Galois/: Galois.sln
Galois/Debug/: Galois.ilk
Galois/Galois/: CMakeLists.txt  Galois.cpp  Galois.vcxproj  Galois.vcxproj.filters
Galois/Galois/Debug/: Galois.pch  vc141.idb
Galois/Galois/Debug/Galois.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Galois.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RadixSort/: CMakeLists.txt  RadixSort.cbp  RadixSort.depend  RadixSort.layout  main.cpp
simFotbal/: CMakeLists.txt  ecp.txt  main.cpp  simFotbal.cbp  simFotbal.depend  simFotbal.layout  time.txt  urmMeci.txt
substrSeq/: substrSeq.sln
substrSeq/Debug/: substrSeq.ilk
substrSeq/substrSeq/: CMakeLists.txt  substrSeq.cpp  substrSeq.vcxproj  substrSeq.vcxproj.filters
substrSeq/substrSeq/Debug/: substrSeq.pch  vc141.idb
substrSeq/substrSeq/Debug/substrSeq.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  (+2 more)
